# git-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  COMMIT_EDITMSGT:::;;  Makefile  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml
git_manager/: configure_git_identity.sh  loguru_logger.py  main.py
